Fix bad CSS alignments and zero-tab bug

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -20,8 +20,10 @@
 }
 
 body {
-  background-image: url(/src/assets/images/background3.jpg);
-  background-size: contain;
+  height: 100%;
+  width: 100%;
+  background: url(/src/assets/images/background3.jpg) no-repeat center fixed;
+  background-size: cover;
 
   /* 페이지 로딩 애니메이션 추가 */
   animation-duration: 1s;
@@ -29,12 +31,45 @@ body {
   animation-iteration-count:initial;
 }
 
+.rowflex {
+  margin: 10px auto;
+  display: flex;
+}
+
+.colelem-2 {
+  flex:2;
+}
+
+.colelem-3 {
+  flex:3;
+}
+
+.colflex {
+  display: flex;
+  flex-direction: column;
+}
+
 #container {
   width: 1200px;
+  height: 100%;
   margin: 20px auto;
 }
 
 #title {
+  color: black;
+  font-family: 'Ubuntu';
+  font-size: 35px;
+  background-color: white;
+  background-color: rgba( 255, 255, 255, 0.7 );
+  border: 2px solid black;
+  border-radius: 20px;
+  line-height: 100px;
+  margin: 10px auto;
+  width: 100%;
+  height: 100%;
+}
+
+#title_sub {
   color: black;
   font-family: 'Ubuntu';
   font-size: 35px;
@@ -58,7 +93,7 @@ body {
   margin: 10px auto;
   padding: 10px;
   width: 100%;
-  height: 500px;
+  height: 100%;
   font-size: 25px;
 }
 
@@ -78,8 +113,7 @@ body {
   border-radius: 20px;
   padding: 10px;
   margin-right: 5px;
-  width: 495px;
-  height: 700px;
+  height: 100%;
   color: black;
   text-align: center;
   float:left;
@@ -103,13 +137,22 @@ body {
   border-radius: 20px;
   padding: 10px;
   margin-left: 5px;
-  width: 695px;
-  height: 700px;
+  height: flex;
   float:right;
   font-size: 25px;
 }
 
-
+#server_message {
+  flex-grow: 1;
+  object-fit:cover;
+  resize: none;
+  font-family: Consolas, IBM Plex Sans, sans-serif;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 12px;
+  border-radius: 12px 12px 0 12px;
+}
 
 /* page loading animation */
 @keyframes slide_up {
