--- a/frontend/src/components/MultiTabInput/MultiTabInput.css
+++ b/frontend/src/components/MultiTabInput/MultiTabInput.css
@@ -1,6 +1,7 @@
 .multi-tab-input {
     padding: 20px;
-    height: 20rem;
+    width: 100%;
+    height: 100%;
 }
 
 .tabs-container {
@@ -78,7 +79,7 @@ button:hover {
 
 .input-container {
     margin-top: 1rem;
-    height: 100px;
+    height: 100%;
 }
 
 textarea {
